# Docker-Topology-Live

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  SECURITY.md  app.py  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  validation-result.md
.github/workflows/: browser-smoke.yml  ci.yml  docker-live-preflight.yml  linux-docker-validation.yml  release-readiness.yml
demo/: docker-compose.yml
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  DATA_CONTRACT.md  DIAGNOSTICS_TUNING.md  ISSUE_TRIAGE.md  RELEASE.md  VALIDATION.md  VALIDATION_ISSUES.md
docs/releases/: v0.3.0.md
examples/: topology.sample.json
schemas/: diagnostics.schema.json  metrics.schema.json  topology.schema.json
scripts/: browser_smoke.py  manual_validation.sh  release_check.sh
src/docker_topology_live/: __init__.py  cli.py  diagnostics.py  events.py  metrics.py  models.py  prometheus.py  scanner.py  server.py  stats.py
src/docker_topology_live/web/: index.html
src/docker_topology_live/web/assets/: app.js  styles.css
tests/: test_browser_smoke_script.py  test_cli.py  test_diagnostics.py  test_docker_live_preflight_workflow.py  test_event_filters.py  test_events.py  test_linux_docker_validation_workflow.py  test_metric_history_ui.py  test_metrics.py  test_models.py  test_mount_source_boundaries.py  test_privacy.py  test_prometheus.py  test_release_readiness.py  test_scanner.py  test_server.py  test_stats.py  test_web_ui.py
